# AI_Coding_terminal

./: README.md
ai_terminal_assistant_project/: README.md  pyproject.toml  setup.py
ai_terminal_assistant_project/ai_terminal_assistant/: __init__.py  ai_utils.py  chat_context.json  main_gui.py  snake.html  snake.js
ai_terminal_assistant_project/ai_terminal_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
